--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
             </span>
             <a class="portfolio-link" data-toggle="modal" href="#energy-lending">
             <h4 class="service-heading">Energy Lending</h4>
@@ -445,7 +445,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-home fa-stack-1x fa-inverse"></i>
             </span>
             <a class="portfolio-link" data-toggle="modal" href="#real-estate">
               <h4 class="service-heading">Commercial Real Estate</h4>
@@ -455,7 +455,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-pie-chart fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
             </span>
             <a class="portfolio-link" data-toggle="modal" href="#commercial-litigation">
             <h4 class="service-heading">Commercial Litigation</h4>
@@ -466,7 +466,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
             </span>
             <a class="portfolio-link" data-toggle="modal" href="#business-formation">
             <h4 class="service-heading">Business Formation</h4>
@@ -488,7 +488,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-group fa-stack-1x fa-inverse"></i>
             </span>
             <a class="portfolio-link" data-toggle="modal" href="#mergers-acquisitions">
             <h4 class="service-heading">Mergers and Acquisitions</h4>
@@ -499,7 +499,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-folder-open fa-stack-1x fa-inverse"></i>
             </span>
             <a class="portfolio-link" data-toggle="modal" href="#licensing-distribution">
             <h4 class="service-heading">Licensing and Distribution Agreements</h4>
@@ -645,13 +645,14 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <!-- Project Details Go Here -->
+                  <!-- Details Go Here -->
                   <span class="fa-stack fa-4x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
                       <i class="fa fa-area-chart fa-stack-1x fa-inverse"></i>
                     </span>
                   <h2 class="text-uppercase">Oil and Gas Law</h2>
-                  <p class="item-intro text-muted">Our firm offers experienced representation in all aspects of oil and gas transactions and litigation. We represent publicly traded corporations, large and small independent producers, individuals and trusts in sophisticated oil and gas law transactions and disputes.</p>
+                  <p>Our firm offers experienced representation in all aspects of oil and gas transactions and litigation. We represent publicly traded corporations, large and small independent producers, individuals and trusts in sophisticated oil and gas law transactions and disputes.</p>
+
                   <p>Our oil and gas transactional practice is led by Pat Murphy, one of the most experienced oil and gas attorneys in the Fort Worth area. Mr. Murphy is board certified in oil, gas and mineral law by the Texas Board of Legal Specialization and is a frequent speaker on oil and gas law topics at industry and legal seminars. Murphy Mahon Keffler & Farrier is a full-service law firm for the oil and gas industry. We represent our clients in numerous types of energy transactions, including:</p>
                   <ul class="list-inline">
                     <li>The purchase and sale of oil and gas properties</li>
@@ -697,23 +698,14 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-area-chart fa-stack-1x fa-inverse"></i>
                       </span>
-                    <h2 class="text-uppercase">Oil and Gas Law</h2>
-                    <p class="item-intro text-muted">Our firm offers experienced representation in all aspects of oil and gas transactions and litigation. We represent publicly traded corporations, large and small independent producers, individuals and trusts in sophisticated oil and gas law transactions and disputes.</p>
-                    <p>Our oil and gas transactional practice is led by Pat Murphy, one of the most experienced oil and gas attorneys in the Fort Worth area. Mr. Murphy is board certified in oil, gas and mineral law by the Texas Board of Legal Specialization and is a frequent speaker on oil and gas law topics at industry and legal seminars. Murphy Mahon Keffler & Farrier is a full-service law firm for the oil and gas industry. We represent our clients in numerous types of energy transactions, including:</p>
-                    <ul class="list-inline">
-                      <li>The purchase and sale of oil and gas properties</li>
-                      <li>Farm-out and exploration agreements</li>
-                      <li>Operating Issues</li>
-                      <li>Oil and gas title matters</li>
-                      <li>Asset-based production loans</li>
-                      <li>Oil and gas loan workouts and restructuring agreements</li>
-                    </ul>
-                    <p>
-                      In addition to these oil and gas transactions, we also offer our oil and gas clients a complete range of business law services, from business formation advice through mergers and acquisitions to licensing and distribution agreements.
+                    <h2 class="text-uppercase">Energy Lending</h2>
+                    <p>Our experience in representing clients in oil and gas transactions has allowed our firm to develop a specialized expertise in energy lending. We represent both financial institutions and borrowers in secured credit transactions relating to the energy industry.
                     </p>
-                    <h3>Experienced Representation in Oil and Gas Law Disputes and Litigation</h3>
+                    <p>We represent several financial institutions in asset-based production loans and oil and gas loan workouts and restructuring. For more information about the legal services we provide to banks and financial institutions, please view the Banking and Finance page of this site. Some of the financial institutions we represent in energy lending transactions are shown on our Representative Clients page.
+                    </p>
+
                     <p>
-                      Murphy Mahon Keffler & Farrier also handles disputes and litigation that arise during all phases of oil and gas exploration, development and production. We have substantial experience in lease termination cases, royalty disputes, mineral title disputes and operating agreement disputes.
+                      We also represent borrowers in energy lending transactions, including operators and developers. For more information about the legal services we provide to businesses in the oil and gas industry, please view the Oil and Gas Law page of this site.
                     </p>
                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                       <i class="fa fa-times"></i>
@@ -745,23 +737,22 @@
                       <i class="fa fa-area-chart fa-stack-1x fa-inverse"></i>
                     </span>
                   <h2 class="text-uppercase">Banking and Finance</h2>
-                  <p class="item-intro text-muted">Our firm offers experienced representation in all aspects of oil and gas transactions and litigation. We represent publicly traded corporations, large and small independent producers, individuals and trusts in sophisticated oil and gas law transactions and disputes.</p>
-                  <p>Our oil and gas transactional practice is led by Pat Murphy, one of the most experienced oil and gas attorneys in the Fort Worth area. Mr. Murphy is board certified in oil, gas and mineral law by the Texas Board of Legal Specialization and is a frequent speaker on oil and gas law topics at industry and legal seminars. Murphy Mahon Keffler & Farrier is a full-service law firm for the oil and gas industry. We represent our clients in numerous types of energy transactions, including:</p>
-                  <ul class="list-inline">
-                    <li>The purchase and sale of oil and gas properties</li>
-                    <li>Farm-out and exploration agreements</li>
-                    <li>Operating Issues</li>
-                    <li>Oil and gas title matters</li>
-                    <li>Asset-based production loans</li>
-                    <li>Oil and gas loan workouts and restructuring agreements</li>
-                  </ul>
-                  <p>
-                    In addition to these oil and gas transactions, we also offer our oil and gas clients a complete range of business law services, from business formation advice through mergers and acquisitions to licensing and distribution agreements.
+                  <p>Our law firm has a strong and well-respected practice in banking and finance law. We represent several financial institutions in all phases of their commercial lending practices. We also represent our clients in litigation arising from lending transactions.
                   </p>
-                  <h3>Experienced Representation in Oil and Gas Law Disputes and Litigation</h3>
-                  <p>
-                    Murphy Mahon Keffler & Farrier also handles disputes and litigation that arise during all phases of oil and gas exploration, development and production. We have substantial experience in lease termination cases, royalty disputes, mineral title disputes and operating agreement disputes.
+                  <h3>Banking and Finance Transactions</h3>
+                  <p>We represent banks and other financial institutions in all phases of commercial and real estate lending transactions, including negotiation, documentation, closing and administration of the lending transaction. We represent several outstanding financial institutions, some of whom are shown on our Representative Clients page.
                   </p>
+                  <p>
+                      We are also experienced in representation of financial institutions in the specialized area of energy lending. More information about our energy lending practice is available on the Energy Lending page of this site.
+                  </p>
+                  <p>
+                      Our firm also has experience and expertise in representing borrowers in financial lending transactions.
+                  </p>
+                  <h3>Banking Litigation</h3>
+                  <p>
+                      Our representation of financial institutions extends to litigation matters. We have experience in representing financial institutions as plaintiffs and as defendants in lawsuits arising from commercial lending transactions.
+                  </p>
+
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -789,26 +780,22 @@
                   <!-- Details Go Here -->
                   <span class="fa-stack fa-4x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                      <i class="fa fa-area-chart fa-stack-1x fa-inverse"></i>
+                      <i class="fa fa-home fa-stack-1x fa-inverse"></i>
                     </span>
                   <h2 class="text-uppercase">Commercial Real Estate</h2>
-                  <p class="item-intro text-muted">Our firm offers experienced representation in all aspects of oil and gas transactions and litigation. We represent publicly traded corporations, large and small independent producers, individuals and trusts in sophisticated oil and gas law transactions and disputes.</p>
-                  <p>Our oil and gas transactional practice is led by Pat Murphy, one of the most experienced oil and gas attorneys in the Fort Worth area. Mr. Murphy is board certified in oil, gas and mineral law by the Texas Board of Legal Specialization and is a frequent speaker on oil and gas law topics at industry and legal seminars. Murphy Mahon Keffler & Farrier is a full-service law firm for the oil and gas industry. We represent our clients in numerous types of energy transactions, including:</p>
+                  <p class="item-intro text-muted">Murphy Mahon Keffler & Farrier has a strong and well-respected commercial real estate practice. We represent real estate developers, investors, construction contractors and property management companies in all facets of commercial real estate transactions and litigation.</p>
+                  <h3>Experienced Representation in a Broad Range of Commercial Real Estate Transactions</h3>
+                  <p>Our commercial real estate attorneys represent real estate developers, commercial landlords and other clients in the real estate industry in several types of real estate transactions:</p>
                   <ul class="list-inline">
-                    <li>The purchase and sale of oil and gas properties</li>
-                    <li>Farm-out and exploration agreements</li>
-                    <li>Operating Issues</li>
-                    <li>Oil and gas title matters</li>
-                    <li>Asset-based production loans</li>
-                    <li>Oil and gas loan workouts and restructuring agreements</li>
+                    <li>Property acquisitions and sales</li>
+                    <li>Development projects</li>
+                    <li>Commercial lease agreements</li>
+                    <li>Property management</li>
+                    <li>Sale and leaseback transactions</li>
+                    <li>Commercial real estate lending - lender and borrower</li>
+                    <li>Real estate loan restructuring</li>
+                    <li>Real estate debt workouts</li>
                   </ul>
-                  <p>
-                    In addition to these oil and gas transactions, we also offer our oil and gas clients a complete range of business law services, from business formation advice through mergers and acquisitions to licensing and distribution agreements.
-                  </p>
-                  <h3>Experienced Representation in Oil and Gas Law Disputes and Litigation</h3>
-                  <p>
-                    Murphy Mahon Keffler & Farrier also handles disputes and litigation that arise during all phases of oil and gas exploration, development and production. We have substantial experience in lease termination cases, royalty disputes, mineral title disputes and operating agreement disputes.
-                  </p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close</button>
