--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-gavel fa-stack-1x fa-inverse"></i>
             </span>
             <a class="portfolio-link" data-toggle="modal" href="#commercial-litigation">
             <h4 class="service-heading">Commercial Litigation</h4>
