--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
                       <i class="fa fa-linkedin"></i>
                     </a>
                   </li>
+                  <li class="list-inline-item">
+                    <a href="vcards/Tom Farrier.vcf">
+                      <i class="fa fa-vcard"></i>
+                    </a>
+                  </li>
                 </ul>
 
               </div>
